public/styles/dreams/index.css
.container {
    display: inline-grid;
    grid-template-columns: 5vw 5vw 5vw 5vw 5vw 5vw 5vw 5vw 5vw 5vw 5vw 5vw 5vw 5vw 5vw 5vw 5vw 5vw;
    gap: 0px;
    grid-template-rows: 9vh 9vh 9vh 9vh 9vh 9vh 9vh 9vh 9vh 9vh;
    justify-self: center;

}
.box-area {
    overflow: hidden;
}
.dreams-small {
    border: 2px black solid;
    border-radius:50%;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 10px;
    background-color: lightgrey;
    text-align: center;
}

.dreams-medium {
    border: 2px black solid;
    border-radius:  50%;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 20px;
    background-color: lightgrey;
    /* font-size: 20px; */
    text-align: center;
}

.dreams-large {
    border: 2px black solid;
    border-radius:  50%;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 30px;
    background-color: lightgrey;
    /* font-size: 30px; */
    text-align: center;
}

.one {
    grid-column: 1/4;
    grid-row: 2/5;

}

.two {
    grid-column: 12/14;
    grid-row: 2/4;
}

.three {
    grid-column: 16/19;
    grid-row: 1/4
}

.four {
    grid-column: 6/8;
    grid-row: 1/3
}

.five {
    grid-column: 8/12;
    grid-row: 4/8
}

.six {
    grid-column: 14/17;
    grid-row: 5/8
}

.seven {
    grid-column: 5/7;
    grid-row: 6/8
}

.eight {
    grid-column: 2/5;
    grid-row: 8/11
}

.nine {
    grid-column: 11/14;
    grid-row: 8/11
}

.ten {
    grid-column: 17/19;
    grid-row: 8/10
}

